@@ -5,6 +5,7 @@ Features
 --------
 
 * Add support for fragments in path handlers (Issue #3032)
+* Explain index.html conflicts better (Issue #3022)
 * Recognize both TEASER_END and (new) END_TEASER (Issue #3010)
 * New MARKDOWN_EXTENSION_CONFIGS setting (Issue #2970)
 * Replace ``flowr.js`` with ``justified-layout.js`` by Flickr
